# Cango.CommonUtils

./: CMakeLists.txt  README.md
Documents/CPPLearning/: CRTP.md  Format.md
Headers/Cango/: CommonUtils.hpp
Headers/Cango/CommonUtils/: AsyncItemPool.hpp  CallRateCounterX.hpp  Configurations.hpp  CounterX.hpp  IntervalSleeper.hpp  JoinThreads.hpp  ObjectOwnership.hpp  ScopeNotifier.hpp
Modules/AsyncItemPool/: CMakeLists.txt  README.md
Modules/AsyncItemPool/Headers/Cango/CommonUtils/: AsyncItemPool.hpp
Modules/AsyncItemPool/Sources/: AsyncItemPool.cpp
Modules/AsyncItemPool/Testers/: Tester.cpp
Modules/CallRateCounterX/: CMakeLists.txt
Modules/CallRateCounterX/Sources/: CallRateCounterX.cpp
Modules/CallRateCounterX/Testers/: Tester.cpp
Modules/Configurations/: CMakeLists.txt
Modules/Configurations/Sources/: Configurations.cpp
Modules/Configurations/Testers/: MatchTester.cpp
Modules/CounterX/: CMakeLists.txt
Modules/CounterX/Headers/Cango/CommonUtils/: CallCounterX.hpp  (+1 more)
Modules/CounterX/Sources/: CallCounterX.cpp  CounterX.cpp
Modules/CounterX/Testers/: Main.cpp  Tester.cpp
Modules/FormatExtension/: CMakeLists.txt
Modules/FormatExtension/Sources/: FormatExtension.cpp
Modules/GlobalLogger/: CMakeLists.txt
Modules/GlobalLogger/Sources/: GlobalLogger.cpp
Modules/IntervalSleeper/: CMakeLists.txt
Modules/IntervalSleeper/Sources/: IntervalSleeper.cpp
Modules/IntervalSleeper/Testers/: SomeTest.cpp
Modules/JoinThreads/: CMakeLists.txt
Modules/JoinThreads/Sources/: JoinThreads.cpp
Modules/ObjectOwnership/: CMakeLists.txt
Modules/ObjectOwnership/Headers/Cango/: ObjectOwnership.hpp
Modules/ObjectOwnership/Sources/: ObjectOwnership.cpp
Modules/ObjectOwnership/Testers/: GrammaTester.cpp
Modules/ScopeNotifier/: CMakeLists.txt  README.md
Modules/ScopeNotifier/Sources/: ScopeNotifier.cpp
Modules/ScopeNotifier/Testers/: Tester.cpp
Sources/: CommonUtils.cpp  Configurations.cpp  GlobalLogger.cpp  ScopeNotifier.cpp
Testers/: CallRateCounterTester.cpp  DeliveryTest.cpp  PoolTester.cpp  RateTester.cpp
(+8 files in other folders)
